# EAMP-protocol-v0

./: .eslintrc.js  CLAUDE.md  CONTRIBUTING.md  README.md  TESTING.md  package.json  pyproject.toml  test-runner.sh  tsconfig.json
.github/pull_request_template/: default.md
assets/: README.md
docs/getting-started/: intro.md
docs/learn/: architecture.md
examples/: README.md
examples/servers/nodejs-express/: .env.example  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
examples/servers/nodejs-express/src/: app.ts  index.ts
examples/servers/nodejs-express/src/config/: index.ts
examples/servers/nodejs-express/src/middleware/: validation.ts
examples/servers/nodejs-express/src/routes/: metadata.ts
examples/servers/nodejs-express/src/services/: database.ts  websocket.ts
examples/servers/nodejs-express/src/utils/: logger.ts  sampleData.ts
examples/servers/python-fastapi/: .env.example  pyproject.toml
examples/servers/python-fastapi/app/: __init__.py  config.py  database.py  main.py
examples/servers/python-fastapi/app/middleware/: __init__.py  auth.py  rate_limit.py
specification/: README.md
specification/schemas/: metadata.schema.json
