[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eamp-protocol"
dynamic = ["version"]
description = "Extended Accessibility Metadata Protocol (EAMP) - Making accessibility a network advantage"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Shaft Finance", email = "hello@shaft.finance" },
]
maintainers = [
    { name = "Shaft Finance", email = "dev@shaft.finance" },
]
keywords = [
    "accessibility",
    "wcag", 
    "metadata",
    "ai-agents",
    "protocol",
    "assistive-technology",
    "web3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "anyio>=3.6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
web3 = [
    "py-ipfs-http-client>=0.8.0",
    "web3>=6.0.0",
]
redis = [
    "redis>=4.5.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
    "pre-commit>=3.3.0",
]
all = [
    "eamp-protocol[server,web3,redis,test,dev]"
]

[project.urls]
Homepage = "https://eamp.sh"
Documentation = "https://docs.eamp.sh"
Repository = "https://github.com/shaft-finance/eamp-protocol"
"Bug Tracker" = "https://github.com/shaft-finance/eamp-protocol/issues"
Changelog = "https://github.com/shaft-finance/eamp-protocol/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "packages/python-sdk/eamp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["packages/python-sdk/eamp"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["packages/python-sdk/tests", "examples/servers/python-fastapi/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=eamp",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "web3: marks tests that require web3 dependencies",
]
asyncio_mode = "auto"